// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Components - User Card Snapshots renders mobile and image invalid 1`] = `
<div>
  <div>
    <div
      className="ui hidden divider"
    />
    <div
      className="ui centered grid"
    >
      <i
        aria-hidden="true"
        className="user circle outline huge icon"
      />
    </div>
    <div
      className="ui hidden divider"
    />
  </div>
  <div
    className="ui centered card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        
      </div>
      <div
        className="meta"
      >
        <span>
          
        </span>
      </div>
      <div
        className="description"
      >
        <a
          href={undefined}
          target="_blank"
        >
          See in Spotify
        </a>
      </div>
    </div>
    <div
      className="extra content"
    >
       followers
    </div>
  </div>
</div>
`;

exports[`App Components - User Card Snapshots renders mobile and image valid 1`] = `
<div>
  <img
    alt="hola"
    className="ui small circular centered image"
    onError={[Function]}
    src="url"
  />
  <div
    className="ui centered card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        
      </div>
      <div
        className="meta"
      >
        <span>
          
        </span>
      </div>
      <div
        className="description"
      >
        <a
          href={undefined}
          target="_blank"
        >
          See in Spotify
        </a>
      </div>
    </div>
    <div
      className="extra content"
    >
       followers
    </div>
  </div>
</div>
`;

exports[`App Components - User Card Snapshots renders no mobile and image invalid 1`] = `
<div>
  <div>
    <div
      className="ui hidden divider"
    />
    <div
      className="ui centered grid"
    >
      <i
        aria-hidden="true"
        className="user circle outline massive icon"
      />
    </div>
    <div
      className="ui hidden divider"
    />
  </div>
  <div
    className="ui centered card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        
      </div>
      <div
        className="meta"
      >
        <span>
          
        </span>
      </div>
      <div
        className="description"
      >
        <a
          href={undefined}
          target="_blank"
        >
          See in Spotify
        </a>
      </div>
    </div>
    <div
      className="extra content"
    >
       followers
    </div>
  </div>
</div>
`;

exports[`App Components - User Card Snapshots renders no mobile and image valid 1`] = `
<div>
  <img
    alt="hola"
    className="ui medium circular centered image"
    onError={[Function]}
    src="url"
  />
  <div
    className="ui centered card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="header"
      >
        
      </div>
      <div
        className="meta"
      >
        <span>
          
        </span>
      </div>
      <div
        className="description"
      >
        <a
          href={undefined}
          target="_blank"
        >
          See in Spotify
        </a>
      </div>
    </div>
    <div
      className="extra content"
    >
       followers
    </div>
  </div>
</div>
`;
